--- a/report.Rmd
+++ b/report.Rmd
@@ -4,12 +4,13 @@ author: "Aditya, Apoorv, Dhvani"
 date: "October 19, 2017"
 output: html_document
 ---
-### Implementation high level view
-![](workflow.png)
-
 
 ### Problem Statement:
 Given historical airplane on time performance data,offer suggestions for two-hop flights that minimize the chance of missing a connection.
+
+### Implementation high level view
+![](workflow.png)
+
 
 ### Implementation
 
@@ -27,29 +28,27 @@ The implementation can be divided into following parts
 
 
 ### Task Distribution
+Design: Aditya, Apoorv, Dhvani  
 HopMapper and Reducer: Aditya and Apoorv  
 DelayCancelmapper and Reducer: Aditya and Dhvani  
 FilterMapper: Aditya, Apoorv, Dhvani  
 Report: Aditya, Apoorv, Dhvani  
 
 
-### Configuration of the machines used:
+### Configuration of the machines used
 
-The program was run on AWS EMR with one namenode and four datanodes on the whole dataset. Running time was 20 minutes. Below is the configuration of the machines used:
+The program was run on AWS EMR with one namenode and four datanodes on the whole dataset. Below is the configuration of the machines used:
 Namenode: 
 vCPU: 8   RAM: 16GB   Hard Disk: 100GB
 Datanodes: 
 vCPU: 16  RAM: 32GB   Hard Disk: 100GB
 
-
-The program was run on AWS EC2 cluster with one namenode and four datanodes on the whole dataset. Running time was 20 minutes. Below is the configuration of the machines used:
-Namenode and Datanodes: 
-vCPU: 16 
-RAM: 32GB 
-Hard Disk: 50GB
-
 Processors for all the above machines were 64 bit 2.4 GHz Intel Xeon® E5-2676 v3 (Haswell) processors. 
 Each vCPU is a hyperthread of an Intel Xeon core.
+
+### Performance  
+
+The program ran on the EMR configuration mentioned above, within 29 minutes
 
 ### Results
 
@@ -61,15 +60,17 @@ Following was the input we gave to our model:
 2001,12,5,DEN,ORD
 ```
 
-We found out that the total number of two hop flights which were on time was * *3561*.
-We found out this using actual arrival time, actual departure time and cancelled data.
+We found out that the total number of two hop flights which were on time was ** 3561 **.
+We found out this using actual arrival time, actual departure time and cancelled data while calculating the two hops.
 
-After the first step where we get the two hop flights, by considering only the CRS scheduled time and not the  cancellation time following was the result
+After the first step where we get the two hop flights, by considering only the CRS scheduled time and not the  cancellation time following was the result :-
 
 | Correct Hops 	| Incorrect Hops 	| Total correct Hops |
 |-------------	|-------------	  |--------------------|
 | 3410         	| 193        	    | 3561               |  
 
+_correct hops : the two hop connection, where both the flights were on time_  
+_incorrect hops : the two hop connection, where either of the flights were not on time or cancelled_
 
 ```{r echo = FALSE}
 df <- data.frame(Two_Hops= factor(c("Correct Hops", "Incorrect Hops")))
@@ -79,7 +80,7 @@ library(ggplot2)
 plot <- ggplot(data=df, aes(x=Two_Hops, y=Number_of_Hops, fill=Two_Hops)) +
   geom_bar(stat="identity") +
   scale_fill_manual(values=c("#66CC88", "#CC6886"))
-print(plot +ggtitle("Hop accuracy after prediction"))
+print(plot +ggtitle("Hop accuracy hop map reducer"))
 ```
 
 After the second step when we give the above data to our model for prediction and consider delay and cancellation for prediction, following was the result
@@ -88,6 +89,8 @@ After the second step when we give the above data to our model for prediction an
 |-------------	|-------------	  |--------------------|
 | 3263         	| 134        	    | 3561               |  
 
+_correct hops : the two hop connection, where both the flights were on time_  
+_incorrect hops : the two hop connection, where either of the flights were not on time or cancelled_
 
 ```{r echo = FALSE}
 df <- data.frame(Two_Hops= factor(c("Correct Hops", "Incorrect Hops")))
@@ -97,10 +100,26 @@ library(ggplot2)
 plot <- ggplot(data=df, aes(x=Two_Hops, y=Number_of_Hops, fill=Two_Hops)) +
   geom_bar(stat="identity") +
   scale_fill_manual(values=c("#66CC88", "#CC6886"))
-print(plot +ggtitle("Hop accuracy after hop mapper reducer"))
+print(plot +ggtitle("Hop accuracy after prediction using model"))
 ```
 
+Precision and accuracy:  
+
+Follwing is the precision and accuracy for our model:-
+
+|Precision|Accuracy|
+|-------- |--------|
+| 0.96 | 0.91 |
+
+Precision is calculated as ( Number of True Positives ) / (Number of True Positives + Number of False Positives)
+
+Accuracy is calculated as (correct hops fetched/ total correct hops)  
+
+### Conclusion  
+
+We build the model by averaging the delay of the flights and taking the cancellation probability of the flight into consideration. Our final output consisted of 3397 two hop flight suggestions. Out of these records 3263 records were correct predictions (the two hop flight reaches destination on time) and 134 were incorrect predictions (the two hop flight does not reach destination in time).  
+We validated our result by comparing it to the actual arrival time, departure time and cancellation time of the flights we have generated as output.  
+Overall the accuracy of using the average delay and cancellation probability as model is 91% with a precision of 96%.  
 
 
 
-### Conclusion
